--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,21 @@
-
 <!-- <div class="container">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+
+</div> -->
 
 
-  <a routerLink="/login" class="btn btn-primary">Login</a>
-  <a routerLink="/register" class="btn btn-primary">Register</a>
-  <br>
-
-
-
+<app-navbar></app-navbar>
+<app-header></app-header>
+<app-category></app-category>
+<!-- <div class="row">
+    <div class="col-lg-3">
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-lg-9">
+        <app-main></app-main>
+    </div>
 </div>
 
-<router-outlet></router-outlet>
- -->
 
-
-
- <nav>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="registration">Registration</a>
-
-    </ul>
-
-  </div>
-</nav>
-<router-outlet></router-outlet>
+<app-footer></app-footer> -->
